# resonance-vpn

./: Cargo.toml  LICENSE  config.example.toml
.github/workflows/: ci.yml  release.yml
crates/resonance-client/: Cargo.toml
crates/resonance-client/src/: deploy.rs  main.rs  routing.rs  tls.rs  tunnel.rs
crates/resonance-client/src/routing/: mod.rs  windows.rs
crates/resonance-daemon/: Cargo.toml
crates/resonance-daemon/src/: ipc.rs  main.rs
crates/resonance-proto/: Cargo.toml  build.rs
crates/resonance-proto/src/: crypto.rs  frame.rs  lib.rs
crates/resonance-server/: Cargo.toml
crates/resonance-server/src/: config.rs  main.rs  nat.rs  tls.rs  tunnel.rs
crates/resonance-tun/: Cargo.toml
crates/resonance-tun/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/resonance-vpn-lib/: Cargo.toml
crates/resonance-vpn-lib/src/: config.rs  deploy.rs  lib.rs  tls.rs  tunnel.rs
crates/resonance-vpn-lib/src/routing/: linux.rs  macos.rs  windows.rs
docs/plans/: 2026-03-02-resonance-vpn-design.md  2026-03-02-resonance-vpn-implementation.md  2026-03-03-gui-design.md  2026-03-03-gui-implementation.md
gui/: package-lock.json  package.json
gui/src/: app.css  app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: daemon.rs  lib.rs  main.rs
gui/src/lib/components/: ConnectButton.svelte  ConnectionStats.svelte  NavBar.svelte  ServerSelector.svelte  Titlebar.svelte
gui/src/lib/ipc/: daemon.ts
gui/src/lib/stores/: profiles.svelte.ts  vpn.svelte.ts
gui/src/routes/: +layout.svelte  +page.svelte
gui/src/routes/deploy/: +page.svelte
gui/src/routes/profiles/: +page.svelte
gui/src/routes/settings/: +page.svelte
proto/: resonance.proto
