[package]
name = "resonance-client"
version = "0.1.0"
edition = "2024"

[dependencies]
resonance-vpn-lib = { path = "../resonance-vpn-lib" }
resonance-tun = { path = "../resonance-tun" }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
