[package]
name = "resonance-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "resonance-daemon"
path = "src/main.rs"

[dependencies]
resonance-vpn-lib = { path = "../resonance-vpn-lib" }
resonance-tun = { path = "../resonance-tun" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
