[package]
name = "resonance-server"
version = "0.1.0"
edition = "2024"

[dependencies]
resonance-proto = { path = "../resonance-proto" }
resonance-tun = { path = "../resonance-tun" }
tokio = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
boring = "5"
tokio-boring = "5"
tokio-tungstenite = "0.26"
futures-util = "0.3"
hyper = { version = "1", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
clap = { version = "4", features = ["derive"] }
fastrand = "2"
