[package]
name = "resonance-tun"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ioctl", "net"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["net"] }

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5"
