[package]
name = "resonance-tun"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.5"
